src/test/ui/suppressed-error.stderr
error[E0308]: mismatched types
  --> $DIR/suppressed-error.rs:2:9
   |
LL |     let (x, y) = ();
   |         ^^^^^^ expected (), found tuple
   |
   = note: expected type `()`
              found type `(_, _)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
